--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <title>React App</title>
 </head>
