Add service section working on importing font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,19 @@
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-  <title>React App</title>
+
+
+  <title>Carlos Lantigua</title>
 </head>
 
 <body>
   <div id="root"></div>
+
+
+
+
+
+  <script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
 </body>
 
 </html>
